moved border from bottom of header to top of main to prevent margin collapse

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
 
 header {
   height: 50%;
-  border-bottom: 5px solid hsl(0deg, 0%, 40%);
 }
 
 .max-width-wrapper {
@@ -28,6 +27,7 @@ strong {
 
 main {
   height: 50%;
+  border-top: 5px solid hsl(0deg, 0%, 40%);
   background-color: hsl(0deg, 0%, 60%);
 }
 
